# software-fault-detection

./: LICENSE  PROMISE.csv  README.md  assignment copy.ipynb  assignment.ipynb  pyproject.toml  requiremets.txt
promise_dataset1/: 1.csv  combine.py
promise_dataset2/: ant-1.4_ground-truth-files_dataset.csv  ant-1.5_ground-truth-files_dataset.csv  ant-1.6_ground-truth-files_dataset.csv  camel-1.0_ground-truth-files_dataset.csv  camel-1.2_ground-truth-files_dataset.csv  camel-1.4_ground-truth-files_dataset.csv  camel-1.6_ground-truth-files_dataset.csv  ivy-1.0_ground-truth-files_dataset.csv  jedit-3.2_ground-truth-files_dataset.csv  jedit-4.0_ground-truth-files_dataset.csv  jedit-4.1_ground-truth-files_dataset.csv  jedit-4.2_ground-truth-files_dataset.csv  log4j-1.0_ground-truth-files_dataset.csv  log4j-1.1_ground-truth-files_dataset.csv  log4j-1.2_ground-truth-files_dataset.csv  lucene-2.0_ground-truth-files_dataset.csv  lucene-2.2_ground-truth-files_dataset.csv  lucene-2.4_ground-truth-files_dataset.csv  poi-1.5_ground-truth-files_dataset.csv  poi-2.0_ground-truth-files_dataset.csv  poi-2.5_ground-truth-files_dataset.csv  poi-3.0_ground-truth-files_dataset.csv  synapse-1.0_ground-truth-files_dataset.csv  synapse-1.1_ground-truth-files_dataset.csv  synapse-1.2_ground-truth-files_dataset.csv  velocity-1.4_ground-truth-files_dataset.csv  velocity-1.5_ground-truth-files_dataset.csv  velocity-1.6_ground-truth-files_dataset.csv  xerces-1.1_ground-truth-files_dataset.csv  xerces-1.4.4_ground-truth-files_dataset.csv
